--- a/my-weather-app/src/index.html
+++ b/my-weather-app/src/index.html
@@ -15,13 +15,13 @@
     <main>
         <div class="cont">
             <section class="location">
-                <div class="city">Northampton, GB</div>
+                <div class="city">London, GB</div>
                 <div class="date">Thursday 10 January 2020</div>
             </section>
             <div class="current">
-                <div class="temp">15<span>°c</span></div>
-                <div class="weather">Sunny</div>
-                <div class="hi-low">13°c / 16°c</div>
+                <div class="temp">10<span>°c</span></div>
+                <div class="weather">Clear</div>
+                <div class="hi-low">7°c / 10°c</div>
             </div>
         </div>
 
